[package]
name = "geil"
version = "0.0.1-alpha.0"
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/geil"
repository = "https://github.com/nukesor/geil"
license = "MIT"
keywords = ["commandline", "git", "manager"]
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "cargo"] }
comfy-table = "7"
config = { version = "0.14", default-features = false, features = ["yaml"] }
crossterm = "0.28"
dirs = "5"
indicatif = { version = "0.17", features = ["rayon"] }
log = "0.4"
rayon = "1"
serde = "1"
serde_cbor = "0.11"
serde_derive = "1"
serde_with = "3"
shellexpand = "3"
simplelog = { version = "0.12", default-features = false }
strum = { version = "0.26", features = ["derive"] }
subprocess = "0.2"
