[package]
name = "geil"
version = "0.0.1-alpha.0"
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/geil"
repository = "https://github.com/nukesor/geil"
license = "MIT"
keywords = ["commandline", "git", "manager"]
readme = "README.md"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive"] }
comfy-table = "7"
dirs = "6"
indicatif = { version = "0.18", features = ["rayon"] }
log = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_with = "3"
simplelog = { version = "0.12", default-features = false }
strum = { version = "0.27", features = ["derive"] }
subprocess = "0.2"
